<resources>
    <string name="wallet">Wallet</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us your device specification and app log,
    all you have to do is click OK. This will help us prevent the error from occurring again</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_keys" translatable="false">Keys</string>
    <string name="label_properties">Properties</string>
    <string name="require_to_send_fund">Required to send funds</string>
    <string name="add_an_account">ADD AN ACCOUNT</string>
    <string name="available_balance">AVAILABLE BALANCE</string>
    <string name="input_or_scan_the_destination_transactionfee_and_the_amount_in_dcr_to_send_fund">Input or scan the destination wallet address\nand the amount in DCR to send funds.</string>
    <string name="max">SEND MAX</string>
    <string name="type">Type</string>
    <string name="loading">Loading</string>
    <string name="date">Date</string>
    <string name="dcr">DCR</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="overview">Overview</string>
    <string name="permission">Permission</string>
    <string name="denied_permission">You denied the permission!!!</string>
    <string name="error_bundle_null">Error occurred, Bundle is null</string>
    <string name="receive">Receive</string>
    <string name="tickets">Tickets</string>
    <string name="amount_dcr">Amount</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="hash">Hash</string>
    <string name="connection">Connection</string>
    <string name="certificate">Certificate</string>
    <string name="confirmations">Confirmation</string>
    <string name="testnet">testnet</string>
    <string name="general">General</string>
    <string name="view_on_dcrdata">view on dcrdata</string>
    <string name="build_date">Build Date</string>
    <string name="build">build</string>
    <string name="copy_on_tap">(copy on tap)</string>
    <string name="for_more_information_please_visit">For more information please visit</string>
    <string name="https_docs_decred_org" translatable="false">https://docs.decred.org</string>
    <string name="exit_app_prompt_title">Exit wallet?</string>
    <string name="exit_app_prompt_message">Are you sure you want to exit?</string>
    <string name="details">Details</string>
    <string name="setting">Setting</string>
    <string name="hide_this_account">Hide This Account</string>
    <string name="account_balance_will_be_ignored">Account balance will be ignored.</string>
    <string name="default_account">Default Account</string>
    <string name="exit_cap">EXIT</string>
    <string name="hidden">hidden</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="usd" translatable="false">USD</string>
    <string name="hyphen">-</string>
    <string name="bittrex_unavailable">Bittrex rate unavailable (tap to retry)</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="settings">Settings</string>
    <string name="changes_after_restart">Changes will take effect after app restarts</string>
    <string name="view_cap">VIEW</string>
    <string name="close_cap">CLOSE</string>
    <string name="exchange_rate_error">Exchange failed with error:</string>
    <string name="exchange_rate_unavailable"> rate unavailable (tap to retry)</string>
    <string name="ago">ago</string>
    <string name="now">now</string>
    <string name="you_received">You received</string>
    <string name="disconnected">Disconnected</string>
    <string name="synced">Synced</string>
    <string name="syncing">Syncing</string>
    <string name="with">with</string>
    <string name="ok">OK</string>
    <string name="user_agent">User Agent</string>
    <string name="log_file_not_found">Log file not found</string>
    <string name="wallet_log_copied">Wallet log copied successfully</string>
    <string name="dismiss">Dismiss</string>
    <string-array name="nav_list_titles">
        <item>Overview</item>
        <item>History</item>
        <item>Send</item>
        <item>Receive</item>
        <item>Accounts</item>
        <item>Security</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string name="view_peers">View peers</string>
    <string name="id" translatable="false">Id</string>
    <string name="address_local" translatable="false">Address local</string>
    <string name="services">Services</string>
    <string name="relaytxes" translatable="false">Relaytxes</string>
    <string name="last_send">Last send</string>
    <string name="last_receive">Last receive</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_receive">Bytes receive</string>
    <string name="conntime" translatable="false">Conntime</string>
    <string name="time_offset">Time offset</string>
    <string name="pingtime" translatable="false">Pingtime</string>
    <string name="version">Version</string>
    <string name="sub_version">Sub version</string>
    <string name="inbound">Inbound</string>
    <string name="banscore" translatable="false">Banscore</string>
    <string name="syncode">Syncode</string>
    <string name="peer_details">Peer Details</string>
    <string name="peers">Peers</string>
    <string name="no_peer_found">No Peer Found</string>
    <string name="get_peer_info">Get Peers Info</string>
    <string name="summary_peers">View available peers and details</string>
    <string name="connecting_to_peers">Connecting to peers</string>
    <string name="invalid_peer_address">Peer address is invalid</string>
    <string name="subscribe_to_block_notification">Subscribe to block notification</string>
    <string name="discover_addresses">Discover addresses</string>
    <string name="connected_to_remote_node">Connected To Remote Node</string>
    <string name="connecting_to_rpc_server">Connecting to RPC Server</string>
    <string name="connecting_attempt">Connecting attempt</string>
    <string name="rpc_connection_failed">RPC Connection Failed:</string>
    <string name="peer">peer</string>
    <string name="fetched">fetched</string>
    <string name="fetching_missing_cfilters">Fetching Missing CFilters</string>
    <string name="cfilters">CFilters</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="account_number">Account Number</string>
    <string name="edit_account_name">Edit account name</string>
    <string name="spinner_account">Account:</string>
    <string name="input_your_new_account_name_and_enter_your_private_passphrase">Input your new account name and enter your private passphrase</string>
    <string name="account_name">Account Name</string>
    <string name="create_account">Create Account</string>
    <string name="add_account">Add Account</string>
    <string name="creating_account">Creating account…</string>
    <string name="input_account_name">Enter a name for your account</string>
    <string name="hd_path">HD Path</string>
    <string name="default_account_info">Make this account default for all outgoing and incoming transactions.</string>
    <string name="external">external</string>
    <string name="internal">internal</string>
    <string name="imported">imported</string>
    <string name="save_seed_instruction">Write down this seed phrase and save it in a secure location. You will be asked to enter it on the next screen and if you ever need to restore your wallet.</string>
    <string name="please_confirm_your_seed_by_typing_and_tapping_each_word_accordingly">Each field contains only one correct word. Please confirm your seeds by selecting each correct word.</string>
    <string name="start_typing_the_word_and_tap_correct_from_list">Start typing the word and then tap the correct word from the suggestion list.</string>
    <string name="enter_your_seed">Enter your seed…</string>
    <string name="theInputFieldIsEmpty">The input fields is empty. Please, enter the words.</string>
    <string name="error_seed_not_generated">Error occurred, Seed was not generated</string>
    <string name="warning_save_seed">Failure to keep this seed safe can result in theft of your entire wallet or inability to recover your wallet.</string>
    <string name="tap_to_select">Tap to select the word</string>
    <string name="restore_wallet_incorrect_seed_input">You entered an incorrect seed. Please check your words.</string>
    <string name="create_wallet_incorrect_seeds_input">You selected an incorrect word. Please recheck.</string>
    <string name="i_copied_the_seed_phrase">I copied the seed phrase</string>
    <string name="seed_phrase_verification">Seed phrase verification</string>
    <string name="seed_restore">Seed Restore</string>
    <string name="label_spendable">Spendable</string>
    <string name="immature_stake_generation">Immature Stake Generation</string>
    <string name="label_immature_rewards">Immature Rewards</string>
    <string name="label_locked_by_tickets">Locked by Tickets</string>
    <string name="label_voting_authority">Voting Authority</string>
    <string name="current_total_balance">Current Total Balance</string>
    <string name="amount_colon">Amount:</string>
    <string name="equivalent_colon">Equivalent:</string>
    <string name="balance_remaining_colon">Balance Remaining:</string>
    <string name="total_balance">Total Balance</string>
    <string name="setting_up_dcrandroid">SETTING UP DECRED WALLET</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="create_a_new_wallet">Create a New Wallet</string>
    <string name="restore_existing_wallet">Restore Existing Wallet</string>
    <string name="recover_wallet">Recover Wallet</string>
    <string name="private_passphrase">Private Passphrase</string>
    <string name="opening_wallet">Opening wallet…</string>
    <string name="input_private_phrase">Enter your private passphrase</string>
    <string name="create_or_recover_your_wallet_and_start_managing_your_decred">Create or recover your wallet and\nstart managing your decred.</string>
    <string name="enter_your_passphrase">Enter your passphrase</string>
    <string name="invalid_passphrase">Passphrase entered was not valid.</string>
    <string name="invalid_pin">PIN entered was not valid.</string>
    <string name="creating_wallet">Creating wallet…</string>
    <string name="failed_to_open_wallet">Failed to open wallet</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="receive_funds">Receive Funds</string>
    <string name="sending_decred">Sending Decred</string>
    <string name="fee_cap">FEE</string>
    <string name="from_colon">From:</string>
    <string name="to_colon">To:</string>
    <string name="confirmed">Confirmed</string>
    <string name="destination_address">Destination Address</string>
    <string name="estimate_size">Estimate Size:</string>
    <string name="transaction_fee">Transaction fee</string>
    <string name="Transaction_details">Transaction details</string>
    <string name="transaction_confirmation">Please confirm transaction for</string>
    <string name="tx_hash_copy">Hash copied to clipboard</string>
    <string name="tx_notify_title">Incoming Transaction Notifications</string>
    <string name="no_transactions">No transactions</string>
    <string name="no_transactions_sync">No transactions\nSync in progress</string>
    <string name="TxType">Type</string>
    <string name="status">Status</string>
    <string name="_0_dcr">0 DCR</string>
</resources>