<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="120dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/seed_phrase_verification"
            android:textColor="@color/darkBlueTextColor"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/please_confirm_your_seed_by_typing_and_tapping_each_word_accordingly"
            android:textAllCaps="false"
            android:textColor="@color/blueGraySecondTextColor"
            android:textSize="14sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@+id/headerTop">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewSeeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/confirm_seedScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_bar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/seedViewScrollcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ScrollView
                    android:id="@+id/seedViewScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/button_clear_seed"
                    android:layout_toLeftOf="@id/button_clear_seed"


                    >

                    <TextView
                        android:id="@+id/seed_display_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@color/colorPrimary"
                        android:padding="8dp"
                        android:textColor="@color/deepBlackTextColor"
                        android:textSize="18sp"
                        app:fontFamily="@font/inconsolata_regular_family" />

                </ScrollView>

                <ImageView
                    android:id="@+id/button_clear_seed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_margin="15dp"
                    android:background="@color/colorPrimary"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:tint="@android:color/holo_red_dark" />

            </RelativeLayout>

            <View
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@+id/seedViewScrollcon"
                android:layout_margin="8dp"
                android:alpha="0.16"
                android:background="@color/blackBackgroundColor" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/border"
                android:orientation="horizontal"
                android:padding="8.0dip">

                <Button
                    android:id="@+id/button_delete_seed"
                    android:layout_width="102dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/btn_shape"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button_confirm_seed"
                    android:layout_width="102dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_shape3"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>